<?xml version="1.0" encoding="utf-8"?>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  android:fillViewport="true" android:layout_width="match_parent" android:layout_height="match_parent">
	    <RelativeLayout android:orientation="vertical"    android:id="@+id/mainLayout" android:layout_height="wrap_content" android:layout_width="wrap_content">
	        <TextView android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_height="wrap_content" android:textSize="12pt" android:text="@string/logsToUploadText" android:layout_width="wrap_content" android:id="@+id/logsTitle"></TextView>
			<CheckBox android:layout_alignParentLeft="true" android:layout_alignBaseline="@+id/dmesgBox" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/dmesgText" android:id="@+id/dmesgBox" android:checked="true" android:layout_below="@+id/logsTitle"></CheckBox>
			<CheckBox android:layout_toRightOf="@+id/dmesgBox" android:layout_alignBaseline="@+id/dmesgBox" android:layout_alignTop="@+id/dmesgBox" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/logcatText" android:checked="true" android:id="@+id/logcatBox"></CheckBox>
			<CheckBox android:layout_toRightOf="@+id/logcatBox" android:layout_alignBaseline="@+id/dmesgBox" android:layout_alignTop="@+id/dmesgBox" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/radioText" android:checked="true" android:id="@+id/radioBox"></CheckBox>
			<TextView android:layout_alignParentLeft="true" android:layout_below="@+id/dmesgBox" android:layout_height="wrap_content" android:layout_width="wrap_content"  android:text="@string/maskText" android:id="@+id/maskTitle" android:textSize="12pt"></TextView>
			<EditText android:layout_alignParentLeft="true" android:layout_toLeftOf="@+id/maskAddButton" android:layout_alignBaseline="@+id/maskAddText" android:layout_below="@+id/maskTitle" android:layout_height="wrap_content" android:id="@+id/maskAddText" android:layout_width="wrap_content"></EditText>
			<ListView android:id="@+id/maskList" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/maskAddText"></ListView>
			<Button android:layout_alignParentRight="true" android:layout_alignBaseline="@+id/maskAddText" android:layout_below="@+id/maskTitle" android:text="@string/addButtonText" android:layout_height="wrap_content" android:id="@+id/maskAddButton" android:layout_width="wrap_content"></Button>
			<Button android:layout_below="@+id/maskList" android:text="@string/uploadText" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/uploadButton" android:layout_centerHorizontal="true"></Button>
			<TextView android:layout_alignParentLeft="true" android:layout_below="@+id/uploadButton" android:layout_height="wrap_content" android:text="" android:id="@+id/resultText" android:layout_width="wrap_content"></TextView>
		</RelativeLayout>
	</ScrollView>